--- a/.env-example
+++ b/.env-example
@@ -1,36 +1,43 @@
 # This is an example .env file. Copy this to .env and fill in your actual values.
 # Do NOT commit your actual .env file to Git.
 
-# Nostr Private Keys (hex format)
-# Your bot will be launched with a specific CSV file (e.g., events_en.csv or events_ru.csv)
-# and an environment variable name that holds the corresponding private key.
-# For example, if you run: ./nostr_bot events_en.csv NOSTR_PRIVATE_EN
-# Then you need to define NOSTR_PRIVATE_KEY_EN here.
-# Add as many private keys as you have language versions or separate bot identities.
+# --- Nostr Private Keys (Required) ---
+# The docker-compose.yml services expect these environment variables to be set.
 
-NOSTR_PRIVATE_KEY_HEX_1="your_nostr_private_key_hex_for_first_identity_here"
-NOSTR_PRIVATE_KEY_HEX_2="your_nostr_private_key_hex_for_second_identity_here"
+# Production Keys
+NOSTR_PRIVATE_KEY_EN="your_english_specific_private_key_hex"
+NOSTR_PRIVATE_KEY_RU="your_russian_specific_private_key_hex"
 
-# Example for English and Russian specific keys as per README:
-# NOSTR_PRIVATE_KEY_EN="your_english_specific_private_key_hex"
-# NOSTR_PRIVATE_KEY_RU="your_russian_specific_private_key_hex"
+# Test Keys (for -test services)
+NOSTR_PRIVATE_KEY_ENT="your_english_TEST_private_key_hex"
+NOSTR_PRIVATE_KEY_RUT="your_russian_TEST_private_key_hex"
 
-# Logging Configuration (Optional)
+# You can add more keys if you have more bot instances/languages, for example:
+# NOSTR_PRIVATE_KEY_ES="your_spanish_specific_private_key_hex"
+
+
+# --- Logging Configuration (Optional) ---
+# These settings can be used to override defaults set in docker-compose.yml for each service.
+# For example, test services default to LOG_LEVEL=debug and CONSOLE_LOG=true.
 
 # LOG_DIR: Specifies a directory where log files should be stored.
-# If not set, logs will be created in the directory where the bot is run.
-# Example: LOG_DIR=./logs
+# In the Docker setup, this is mapped to a host directory (e.g., ./logs or ./logs-test)
+# The Dockerfile sets a default /app/logs, which is then mapped by docker-compose.
+# You generally do not need to set this variable when using docker-compose,
+# unless you change the volume mapping in docker-compose.yml.
+# LOG_DIR=/app/logs
 
 # LOG_LEVEL: Set the desired logging level.
 # Options: debug, info, warn, error
-# Defaults to 'info' if not specified.
-# 'debug' is very verbose and useful for troubleshooting.
+# Production services default to 'info', test services to 'debug' via docker-compose.yml.
 LOG_LEVEL=info
 
 # DEBUG: Alternative to LOG_LEVEL=debug. Set to 'true' for maximum debug output.
 # Overrides LOG_LEVEL if set to 'true'.
-# DEBUG=true
+# Production services default to 'false', test services to 'true' via docker-compose.yml.
+# DEBUG=false
 
 # CONSOLE_LOG: Set to 'true' to output logs to the console in addition to the log file.
-# Useful for interactive sessions. Defaults to 'false' (file logging only).
-# CONSOLE_LOG=true 
+# Useful for interactive sessions or viewing logs with `docker-compose logs`.
+# Production services default to 'false', test services to 'true' via docker-compose.yml.
+# CONSOLE_LOG=false 
