SQLite DB and API support

--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,10 @@
 # This is an example .env file. Copy this to .env and fill in your actual values.
 # Do NOT commit your actual .env file to Git.
 
+# --- API Configuration (Required) ---
+BOT_API_ENDPOINT="http://your_api_vps_ip:port/api" # Replace with your API's base URL
+BOT_API_KEY="your_secret_api_key"             # Replace with your API key
+
 # --- Nostr Private Keys (Required) ---
 # The docker-compose.yml services expect these environment variables to be set.
 
