--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,8 +48,8 @@ services:
     env_file:
       - .env
     volumes:
-      - ./logs:/app/logs # Consider separate logs/metrics for tests if needed
-      - ./metrics:/app/metrics # e.g., ./logs-test:/app/logs
+      - ./logs:/app/logs
+      - ./metrics:/app/metrics
     restart: 'no'
     environment:
       - BOT_PROCESSING_LANGUAGE=en
